crates/safix/src/snapshots/safix__reporter__tests__graphical-recipients_unreadable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::recipients_unreadable

  × could not read the recipients of secrets/safix/users/ana/secrets.yaml
  ╰─▶ a sops age stanza names no recipient
