crates/safix/src/snapshots/safix__reporter__tests__graphical-rewrap_unschedulable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::rewrap_unschedulable

  × a governed file's re-wrap could not be run: task panicked
