crates/safix/src/snapshots/safix__reporter__tests__graphical-scaffold_declined.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::refusal

  × aborted; nothing was written
