crates/safix/src/snapshots/safix__reporter__tests__graphical-scaffold_exists.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::scaffold_exists

  × safix/users/dee.nix already exists but declares no user; resolve that by
  │ hand before scaffolding over it
